[gd_scene load_steps=6 format=4 uid="uid://c0pqibn3j72ps"]

[ext_resource type="PackedScene" uid="uid://b46qouyu3lx2m" path="res://scenes/windows/window_base.tscn" id="1"]
[ext_resource type="Script" uid="uid://dg5xd6f1c52ov" path="res://scenes/windows/window_critical_payload.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://h74p5kyyjmx8" path="res://textures/icons/thunder.png" id="3"]
[ext_resource type="PackedScene" uid="uid://co5icrrrwscgg" path="res://scenes/input_container.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://b4efojcll7i7" path="res://scenes/output_container.tscn" id="5"]

[node name="WindowBase" instance=ExtResource("1")]
offset_bottom = 187.0
script = ExtResource("2")
window = "critical_payload"

[node name="Icon" parent="TitlePanel/TitleContainer" index="0"]
texture = ExtResource("3")

[node name="Title" parent="TitlePanel/TitleContainer" index="1"]
text = "Critical Payload"

[node name="MainContainer" type="VBoxContainer" parent="PanelContainer" index="0"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="PayloadIn" parent="PanelContainer/MainContainer" index="0" node_paths=PackedStringArray("exporting") instance=ExtResource("4")]
layout_mode = 2
default_resource = "payload_damage"
force_resource = true
exporting = [NodePath("../PayloadOut")]

[node name="PayloadOut" parent="PanelContainer/MainContainer" index="1" instance=ExtResource("5")]
layout_mode = 2
default_resource = "payload_damage"

[connection signal="resource_set" from="PanelContainer/MainContainer/PayloadIn" to="." method="_on_payload_in_resource_set"]
